--- a/bab4-implementasi.tex
+++ b/bab4-implementasi.tex
@@ -5,13 +5,13 @@
 Pada bab ini dijelaskan setiap hal yang dilakukan oleh penulis untuk melakukan implementasi terhadap rancangan yang telah dibuat pada bab sebelumnya. Penulis melakukan implementasi \textit{adaptor} yang akan dipanggil melalui \textit{template engine} dan juga melalui model lainnya. Selain itu, penulis juga memanfaatkan \textit{adaptor} yang sudah diimplementasikan pada \textit{business logic}.
 
 %-----------------------------------------------------------------------------%
-\section{Interface \textit{Adaptor}}
+\section{\textit{Interface Adaptor}}
 %-----------------------------------------------------------------------------%
 
-Untuk dapat menjalankan fungsi \textit{adaptor} yang diinginkan, penulis membuat sebuah model baru pada zotonic dengan nama m\_abs pada folder \co{root/src/models}. Untuk membuat sebuah model pada zotonic, zotonic mengharuskan setiap model untuk mengekspor beberapa fungsi yang dimiliki oleh zotonic yaitu m\_find\_value, m\_to\_list, dan m\_value agar fungsi tersebut dapat digunakan melalui \textit{template engine}.
+Untuk dapat menjalankan fungsi \textit{adaptor} yang diinginkan, penulis membuat sebuah model baru pada Zotonic dengan nama m\_abs pada folder \co{root/src/models}. Untuk membuat sebuah \textit{model} pada Zotonic, Zotonic mengharuskan setiap \textit{model} untuk mengekspor beberapa fungsi yang dimiliki oleh Zotonic yaitu m\_find\_value, m\_to\_list, dan m\_value agar fungsi tersebut dapat digunakan melalui \textit{template engine}.
 
 \begin{minipage}{\linewidth}
-\begin{lstlisting}[caption={Fungsi yang harus diekspor untuk model},label={lst:librarymodel}]
+\begin{lstlisting}[caption={Fungsi yang harus diekspor untuk \textit{model}},label={lst:librarymodel}]
 -export([
 	m_find_value/3,
 	m_to_list/2,
@@ -20,7 +20,7 @@ Untuk dapat menjalankan fungsi \textit{adaptor} yang diinginkan, penulis membuat
 \end{lstlisting}
 \end{minipage}\\\\
 
-Seperti yang dapat dilihat pada kode \ref{lst:librarymodel}, agar fungsi tersebut dapat dijalankan pada \textit{template engine}, tentu harus diimplementasi sesuai dengan kebutuhan. Sesuai dengan kebutuhannya agar \textit{adaptor} dapat dipanggil melalui \textit{template engine}, maka perlu didefinisikan terlebih dahulu bagaimana nantinya \textit{adaptor} dipanggil. Pada penelitian ini, penulis mendefinisikan untuk pemanggilan \textit{adaptor} pada \textit{template engine} dilakukan dengan membuat perintah \co{m.abs.namaFungsi[\{query param=value\}]}. Implementasi dari fungsi m\_find\_value yang digunakan untuk melakukan pencocokan pola akan dijelaskan pada bagian berikutnya. Untuk fungsi m\_to\_list karena pada kasus ini tidak digunakan jadi cukup diimplementasikan seperti kode \ref{lst:mtolist} berikut
+Seperti yang dapat dilihat pada Kode \ref{lst:librarymodel}, agar fungsi tersebut dapat dijalankan pada \textit{template engine}, tentu harus diimplementasi sesuai dengan kebutuhan. Sesuai dengan kebutuhannya agar \textit{adaptor} dapat dipanggil melalui \textit{template engine}, maka perlu didefinisikan terlebih dahulu bagaimana nantinya \textit{adaptor} dipanggil. Pada penelitian ini, penulis mendefinisikan untuk pemanggilan \textit{adaptor} pada \textit{template engine} dilakukan dengan membuat perintah \co{m.abs.namaFungsi[\{query param=value\}]}. Implementasi dari fungsi m\_find\_value yang digunakan untuk melakukan pencocokan pola akan dijelaskan pada bagian berikutnya. Untuk fungsi m\_to\_list karena pada kasus ini tidak digunakan jadi cukup diimplementasikan seperti Kode \ref{lst:mtolist} berikut
 
 \begin{minipage}{\linewidth}
 \begin{lstlisting}[caption={Implementasi fungsi m\_to\_list},label={lst:mtolist}]
@@ -29,7 +29,7 @@ m_to_list(_, _Context) ->
 \end{lstlisting}
 \end{minipage}\\
 
-Sama seperti fungsi m\_to\_list, fungsi m\_value juga tidak dibutuhkan pada implementasi \textit{adaptor} sehingga dapat diimplementasikan seperti kode \ref{lst:mvalue} berikut
+Sama seperti fungsi m\_to\_list, fungsi m\_value juga tidak dibutuhkan pada implementasi \textit{adaptor} sehingga dapat diimplementasikan seperti Kode \ref{lst:mvalue} berikut
 
 \begin{minipage}{\linewidth}
 \begin{lstlisting}[caption={Implementasi fungsi m\_value},label={lst:mvalue}]
@@ -71,7 +71,7 @@ m_find_value(_, _, _Context) ->
 \end{lstlisting}
 \end{minipage}\\
 
-Pada kode \ref{lst:mfindvalue}, tahap awal untuk mengimplementasikan fungsi m\_find\_value adalah membuat sebuah \textit{specifications} untuk fungsi tersebut. \textit{Specifications} yang merupakan ketentuan yang harus dipenuhi mengenai \textit{input} yang akan diterima oleh fungsi tersebut dan \textit{output} yang akan dihasilkan oleh fungsi tersebut sehingga fungsi akan dijalankan jika dan hanya jika memenuhi dari \textit{specifications} yang telah didefinisikan. Seperti yang sudah didefinisikan bahwa pemanggilan \textit{adaptor} melalui \textit{template engine} dengan cara \co{m.abs.namaFungsi[\{query param=value\}]}, maka ketika dijalankan m\_abs akan menjalankan \co{m\_find\_value(\{query, Query\}, \#m\{value=Q\})} dimana namaFungsi yang didapatkan dari hasil pemanggilan pada \textit{template engine} akan menjalankan fungsi \co{m\_find\_value(Type, \#m\{value=undefined\})} untuk yang akan mengembalikan sebuah \textit{maps} yang akan diterima kembali oleh fungsi \co{m\_find\_value(\{query, Query\}, \#m\{value=Q\})} yang menyimpan \textit{maps} hasil kembalian tersebut ke dalam variabel Q. Lalu parameter yang terdapat pada \textit{template engine} akan disimpan oleh fungsi \co{m\_find\_value(\{query, Query\}, \#m\{value=Q\})} ke dalam variabel Query.
+Pada Kode \ref{lst:mfindvalue}, tahap awal untuk mengimplementasikan fungsi m\_find\_value adalah membuat sebuah \textit{specifications} untuk fungsi tersebut. \textit{Specifications} yang merupakan ketentuan yang harus dipenuhi mengenai \textit{input} yang akan diterima oleh fungsi tersebut dan \textit{output} yang akan dihasilkan oleh fungsi tersebut sehingga fungsi akan dijalankan jika dan hanya jika memenuhi dari \textit{specifications} yang telah didefinisikan. Seperti yang sudah didefinisikan bahwa pemanggilan \textit{adaptor} melalui \textit{template engine} dengan cara \co{m.abs.namaFungsi[\{query param=value\}]}, maka ketika dijalankan m\_abs akan menjalankan \co{m\_find\_value(\{query, Query\}, \#m\{value=Q\})} dimana namaFungsi yang didapatkan dari hasil pemanggilan pada \textit{template engine} akan menjalankan fungsi \co{m\_find\_value(Type, \#m\{value=undefined\})} untuk yang akan mengembalikan sebuah \textit{maps} yang akan diterima kembali oleh fungsi \co{m\_find\_value(\{query, Query\}, \#m\{value=Q\})} yang menyimpan \textit{maps} hasil kembalian tersebut ke dalam variabel Q. Lalu parameter yang terdapat pada \textit{template engine} akan disimpan oleh fungsi \co{m\_find\_value(\{query, Query\}, \#m\{value=Q\})} ke dalam variabel Query.
 
 Setelah mendapatkan informasi tentang Query dan Q, fungsi m\_find\_value selanjutnya akan mengambil \textit{key} yang akan dijalankan pada tabel \textit{rules}. Langkah pertama, akan diekstrak \textit{key} yang ingin dijalankan dari Q dengan cara \textit{pattern matching}. Setelah mendapatkan \textit{key} yang diinginkan, \textit{key} tersebut akan dijadikan sebagai input untuk pemanggilan fungsi lookup\_rules yang akan mengembalikan \textit{endpoint} yang akan dipanggil oleh m\_abs serta jumlah parameter dari fungsi yang akan dijalankan. Setelah mendapatkan \textit{endpoint} serta jumlah parameter dari hasil pemanggilan fungsi lookup\_rules yang berbentuk \textit{list}, \textit{list} tersebut akan diekstrak menjadi variabel Url yang menyimpan informasi \textit{endpoint} dan variabel Param yang menyimpan informasi jumlah parameter dari fungsi tersebut. Selanjutnya fungsi m\_find\_value akan memanggil fungsi validate\_params dengan parameter Param yang menyimpan informasi jumlah parameter dan variabel Query yang menyimpan informasi mengenai \textit{list} dari parameter yang diberikan pada \textit{template engine}.
 
@@ -79,7 +79,7 @@ Setelah mendapatkan hasil dari pemanggilan fungsi validate\_params, pada fungsi 
 
 \subsection{Pemanggilan \textit{Adaptor} Melalui Model}
 
-Selain dipanggil melalui \textit{template engine}, ada kebutuhan untuk memanggil \textit{adaptor} dari model lain seperti pemanggilannya pada model m\_rsc agar dapat mengirim data dari zotonic kepada \textit{web service} melalui \textit{adaptor}. Untuk itu, perlu diimplementasi sebuah fungsi baru dengan nama call\_api\_controller pada \textit{adaptor} yang dapat diakses secara langsung oleh model lain seperti berikut
+Selain dipanggil melalui \textit{template engine}, ada kebutuhan untuk memanggil \textit{adaptor} dari model lain seperti pemanggilannya pada model m\_rsc agar dapat mengirim data dari Zotonic kepada \textit{web service} melalui \textit{adaptor}. Untuk itu, perlu diimplementasi sebuah fungsi baru dengan nama call\_api\_controller pada \textit{adaptor} yang dapat diakses secara langsung oleh model lain seperti berikut
 
 \begin{minipage}{\linewidth}
 \begin{lstlisting}[caption={Implementasi fungsi untuk pemanggilan \textit{adaptor} dari model},label={lst:adaptormodel}]
@@ -107,7 +107,7 @@ call_api_controller(Key, Data) ->
 \end{lstlisting}
 \end{minipage}
 
-Pada kode \ref{lst:adaptormodel}, fungsi call\_api\_controller menerima dua parameter yaitu \textit{Key} dan Data. \textit{Key} merupakan nama fungsi yang ingin dipanggil oleh \textit{web service}, dan Data merupakan data yang akan dikirim ke \textit{web service}. Parameter \textit{Key} yang didapatkan oleh fungsi call\_api\_controller akan digunakan untuk memanggil fungsi lookup\_rules yang akan mengembalikan sebuah \textit{list} yang berisi \textit{endpoint} serta jumlah parameter dari fungsi yang akan dijalankan. \textit{List} tersebut akan diekstrak dimana \textit{endpoint} disimpan ke dalam variabel Url dan jumlah parameter disimpan ke dalam variabel Param. Setelah melakukan ekstraksi, fungsi call\_api\_controller akan memanggil fungsi validate\_params dengan parameter Param yang menyimpan informasi jumlah parameter dan variabel Data yang menyimpan informasi mengenai \textit{list} dari parameter yang ingin dikirim ke \textit{web services}.
+Pada Kode \ref{lst:adaptormodel}, fungsi call\_api\_controller menerima dua parameter yaitu \textit{Key} dan Data. \textit{Key} merupakan nama fungsi yang ingin dipanggil oleh \textit{web service}, dan Data merupakan data yang akan dikirim ke \textit{web service}. Parameter \textit{Key} yang didapatkan oleh fungsi call\_api\_controller akan digunakan untuk memanggil fungsi lookup\_rules yang akan mengembalikan sebuah \textit{list} yang berisi \textit{endpoint} serta jumlah parameter dari fungsi yang akan dijalankan. \textit{List} tersebut akan diekstrak dimana \textit{endpoint} disimpan ke dalam variabel Url dan jumlah parameter disimpan ke dalam variabel Param. Setelah melakukan ekstraksi, fungsi call\_api\_controller akan memanggil fungsi validate\_params dengan parameter Param yang menyimpan informasi jumlah parameter dan variabel Data yang menyimpan informasi mengenai \textit{list} dari parameter yang ingin dikirim ke \textit{web services}.
 
 Setelah mendapatkan hasil dari pemanggilan fungsi validate\_params, pada fungsi call\_api\_controller akan mengembalikan \textit{error} jika hasil dari pemanggilan fungsi validate\_params bernilai \textit{false}. Sebaliknya, jika hasil dari pemanggilan fungsi validate\_params bernilai \textit{true} maka call\_api\_controller akan memanggil fungsi fetch\_data dengan parameter berupa variabel Url dan juga parameter data yang sudah dijadikan dalam bentuk \textit{json} menggunakan \textit{library} \co{jiffy:encode/1}. Hasil dari pemanggilan fungsi fetch\_data akan mengembalikan sebuah \textit{json} yang berisikan data yang ingin diperoleh. Setelah mendapatkan \textit{json} dari pemanggilan fungsi fetch\_data, dilakukan ekstraksi terhadap parameter "status" dari \textit{json} tersebut. Tujuan dari proses ekstraksi tersebut agar diketahui data yang ingin diambil adalah parameter \textit{"message"} atau parameter "data" dari \textit{json} tersebut. Berikut merupakan tabel \textit{mapping} yang digunakan setelah mendapatkan parameter "status" dari \textit{json}
 
@@ -122,7 +122,7 @@ Setelah mendapatkan hasil dari pemanggilan fungsi validate\_params, pada fungsi 
 		200 & Mengambil informasi & Data \\
 		201 & Mengeksekusi perintah (\textit{insert, update, delete}) & Message \\
 		400 & \textit{Error} dari API & Message \\
-		Other & \textit{error} & Message \\
+		\textit{Other} & \textit{error} & Message \\
 		\hline
 	\end{tabular}
 \end{table}
@@ -141,7 +141,7 @@ nama fungsi : [endpoint, jumlah parameter]
 \end{lstlisting}
 \end{minipage}
 
-Setelah tabel rules selesai dibuat sesuai dengan struktur pada kode \ref{lst:strukturtablerules}, tabel rules tersebut disimpan ke dalam sebuah file yang bernama rules.txt dan ditaruh pada \textit{root} dari zotonic. Selain rules.txt, pada \textit{adaptor} juga perlu diimplementasikan fungsi-fungsi berikut agar \textit{adaptor} dapat bekerja.
+Setelah tabel rules selesai dibuat sesuai dengan struktur pada Kode \ref{lst:strukturtablerules}, tabel rules tersebut disimpan ke dalam sebuah file yang bernama rules.txt dan ditaruh pada \textit{root} dari Zotonic. Selain rules.txt, pada \textit{adaptor} juga perlu diimplementasikan fungsi-fungsi berikut agar \textit{adaptor} dapat bekerja.
 
 \subsection{Implementasi Fungsi \textit{lookup\_rules}}
 
@@ -173,7 +173,7 @@ end.
 \end{lstlisting}
 \end{minipage}
 
-Pada kode \ref{lst:lookuprules}, dapat dilihat bahwa fungsi lookup\_rules akan menjalankan fungsi read\_file yang membaca seluruh isi dari file yang telah didefinisikan sebagai tabel \textit{rules}. Perlu didefinisikan juga dimana lokasi dari tabel \textit{rules} yang akan dibaca sebagai variabel final dengan nama variabel \textit{RULES} pada m\_abs seperti kode \ref{lst:pathrules}
+Pada Kode \ref{lst:lookuprules}, dapat dilihat bahwa fungsi lookup\_rules akan menjalankan fungsi read\_file yang membaca seluruh isi dari file yang telah didefinisikan sebagai tabel \textit{rules}. Perlu didefinisikan juga dimana lokasi dari tabel \textit{rules} yang akan dibaca sebagai variabel final dengan nama variabel \textit{RULES} pada m\_abs seperti Kode \ref{lst:pathrules}
 \begin{minipage}{\linewidth}
 \begin{lstlisting}[caption={lokasi dari \textit{file} rules.txt},label={lst:pathrules}]
 -define(RULES, "./rules.txt").
@@ -195,7 +195,7 @@ end.
 \end{lstlisting}
 \end{minipage}
 
-Pada kode \ref{lst:validateparams}, fungsi validate\_params akan mengembalikan boolean hasil pengecekan jumlah parameter yang didapatkan dari tabel \textit{rules} dan jumlah parameter yang terdapat pada \textit{list} dari \textit{Query}. Kembalikan \textit{true} jika jumlah keduanya sama, dan kembalikan \textit{false} jika jumlahnya tidak sama.
+Pada Kode \ref{lst:validateparams}, fungsi validate\_params akan mengembalikan boolean hasil pengecekan jumlah parameter yang didapatkan dari tabel \textit{rules} dan jumlah parameter yang terdapat pada \textit{list} dari \textit{Query}. Kembalikan \textit{true} jika jumlah keduanya sama, dan kembalikan \textit{false} jika jumlahnya tidak sama.
 
 \subsection{Implementasi Fungsi \textit{fetch\_data}}
 
@@ -220,7 +220,7 @@ end.
 \end{lstlisting}
 \end{minipage}
 
-Pada kode \ref{lst:fetchdata}, terdapat \textit{specifications} untuk fungsi fetch\_data dimana fungsi ini menerima dua parameter yaitu \textit{url} atau \textit{endpoint web services} yang ingin dituju serta \textit{Query} yang berisikan parameter dalam bentuk \textit{json} yang akan dikirim. Fungsi fetch\_data ini kemudian akan mengembalikan sebuah \textit{list} hasil dari pemanggilan \textit{web services} tersebut. Fungsi fetch\_data akan memanggil fungsi post\_page\_body yang akan menjalankan pemanggilan ke \textit{web service}. Jika fungsi post\_page\_body mengembalikan \textit{Json}, maka \textit{Json} tersebut akan di\textit{decode} menggunakan \co{jiffy:decode/1} sehingga dihasilkan sebuah \textit{list} yang akan dikirim kepada pemanggilan fungsi fetch\_data. Tetapi jika fungsi post\_page\_body mengembalikan \textit{error}, maka fungsi fetch\_data juga akan meneruskan error tersebut kepada fungsi pemanggilnya. Adapun implementasi dari fungsi post\_page\_body sebagai kode \ref{lst:postpagebody} berikut.
+Pada Kode \ref{lst:fetchdata}, terdapat \textit{specifications} untuk fungsi fetch\_data dimana fungsi ini menerima dua parameter yaitu \textit{url} atau \textit{endpoint web services} yang ingin dituju serta \textit{Query} yang berisikan parameter dalam bentuk \textit{json} yang akan dikirim. Fungsi fetch\_data ini kemudian akan mengembalikan sebuah \textit{list} hasil dari pemanggilan \textit{web services} tersebut. Fungsi fetch\_data akan memanggil fungsi post\_page\_body yang akan menjalankan pemanggilan ke \textit{web service}. Jika fungsi post\_page\_body mengembalikan \textit{Json}, maka \textit{Json} tersebut akan di\textit{decode} menggunakan \co{jiffy:decode/1} sehingga dihasilkan sebuah \textit{list} yang akan dikirim kepada pemanggilan fungsi fetch\_data. Tetapi jika fungsi post\_page\_body mengembalikan \textit{error}, maka fungsi fetch\_data juga akan meneruskan error tersebut kepada fungsi pemanggilnya. Adapun implementasi dari fungsi post\_page\_body sebagai Kode \ref{lst:postpagebody} berikut.
 
 \begin{minipage}{\linewidth}
 \begin{lstlisting}[caption={Implementasi fungsi post\_page\_body},label={lst:postpagebody}]
@@ -266,11 +266,11 @@ Pada penelitian sebelumnya, proses pembuatan \textit{business logic} dilakukan s
 \end{lstlisting}
 \end{minipage} \\
 
-Pada kode \ref{lst:totalBefore}, dapat dilihat bagaimana proses penjumlahan untuk fungsi total dilakukan secara \textit{javascript}. Setelah dilakukan \textit{refactoring} dengan cara memanfaatkan implementasi dari pemanggilan \textit{adaptor} dari \textit{template}, maka kode \ref{lst:totalBefore} akan diganti menjadi kode \ref{lst:totalAfter}
+Pada Kode \ref{lst:totalBefore}, dapat dilihat bagaimana proses penjumlahan untuk fungsi total dilakukan secara \textit{javascript}. Setelah dilakukan \textit{refactoring} dengan cara memanfaatkan implementasi dari pemanggilan \textit{adaptor} dari \textit{template}, maka Kode \ref{lst:totalBefore} akan diganti menjadi Kode \ref{lst:totalAfter}
 \begin{minipage}{\linewidth}
 \begin{lstlisting}[caption={Fungsi total setelah refactoring}, label={lst:totalAfter}]
 {{m.abs.totalDonation[{query id=id}]}}
 \end{lstlisting}
 \end{minipage} \\
 
-Pada kode \ref{lst:totalAfter}, akan dipanggil \textit{adaptor} dengan \textit{key totalDonation} yang akan menjalankan fungsi untuk menghitung total donasi dengan id program yang sedang diakses baik pada \textit{template} admin maupun \textit{template} untuk pengguna.
+Pada Kode \ref{lst:totalAfter}, akan dipanggil \textit{adaptor} dengan \textit{key totalDonation} yang akan menjalankan fungsi untuk menghitung total donasi dengan id program yang sedang diakses baik pada \textit{template} admin maupun \textit{template} untuk pengguna.
