--- a/bab6-penutup.tex
+++ b/bab6-penutup.tex
@@ -5,7 +5,7 @@ Pada bab ini, akan dijelaskan kesimpulan yang didapatkan berdasarkan hasil penel
 %---------------------------------------------------------------
 \section{Kesimpulan}
 %---------------------------------------------------------------
-Pengembangan program untuk melakukan integrasi ontologi dan \textit{web services} dapat dilakukan dengan memanfaatkan sebuah \textit{adaptor} yang dibuat pada Zotonic dimana \textit{adaptor} tersebut yang akan menghubungkan keduanya seperti yang dilakukan pada penelitian ini. \textit{Adaptor} tersebut akan membaca file rules.txt sebagai tabel \textit{mapping} untuk proses pemanggilan \textit{web services}. Sehingga perlu terlebih dahulu dilakukan pembuatan file rules.txt agar program ini dapat berjalan. Hasil dari implementasi \textit{adaptor} ini dapat digunakan baik melalui \textit{template engine} maupaun model lainnya. \textit{Adaptor} tersebut terdiri dari beberapa fungsi utama seperti fungsi untuk pembacaan tabel \textit{mapping}, pemanggilan \textit{web service} hingga fungsi untuk validasi parameter.
+Pengembangan program untuk melakukan integrasi ontologi dan \textit{web services} dapat dilakukan dengan memanfaatkan sebuah \textit{adaptor} yang dibuat pada Zotonic dimana \textit{adaptor} tersebut yang akan menghubungkan keduanya seperti yang dilakukan pada penelitian ini. \textit{Adaptor} tersebut akan membaca file rules.txt sebagai tabel \textit{mapping} untuk proses pemanggilan \textit{web services}. Hasil dari implementasi \textit{adaptor} ini dapat digunakan baik melalui \textit{template engine} maupaun model lainnya. \textit{Adaptor} tersebut terdiri dari beberapa fungsi utama seperti fungsi untuk pembacaan tabel \textit{mapping}, pemanggilan \textit{web service} hingga fungsi untuk validasi parameter.
 
 Penggunaan \textit{adaptor} pada \textit{template engine} dapat dimanfaatkan untuk menggantikan pembuatan \textit{business logic} yang masih harus dibuat secara manual pada kode. Hal ini berguna agar \textit{business logic} dapat bersifat lebih dinamis dan dapat disesuaikan dengan kebutuhan. Selain itu, pengguna tidak perlu mengimplementasikan \textit{business logic} lagi karena \textit{adaptor} akan langsung memanggil \textit{web services} hasil dari ABS \textit{microservices} untuk menggantikan \textit{business logic}. Sehingga dapat dihasilkan beberapa web yang memiliki struktur yang sama tetapi memiliki \textit{business logic} yang berbeda dengan memanfaatkan \textit{ABS microservices}.
 
@@ -18,4 +18,5 @@ Setelah melakukan penelitian integrasi ontologi dan \textit{web services} pada o
 	\item Melakukan pemetaan antara database yang digunakan oleh zotonic dan database eksternal. Hal ini tidak dilakukan pada penelitian ini karena database yang digunakan oleh zotonic sendiri masih bisa terjadi perubahan kedepannya.
 	\item Melakukan penambahan validasi pada model m\_abs sehingga dapat lebih mudah mengetahui penyebab terjadinya \textit{error}. Pada penelitian ini, validasi yang dilakukan pada model m\_abs hanya sebatas pengecekan jumlah parameter antara parameter yang diberikan pada \textit{json} dan jumlah parameter yang diberikan pada tabel \textit{mapping}.
 	\item Pembuatan tabel \textit{mapping} secara otomatis dari ontologi dan bentuk tabel \textit{mapping} yang lebih sesuai dengan informasi yang didapatkan dari ontologi karena pada penelitian ini, pembuatan tabel \textit{mapping} masih dibuat secara manual tanpa melihat informasi yang dapat diterima dari ontologi.
+	\item Melakukan \textit{migrasi} pada Zotonic ketika adanya perubahan struktur dari ontologi agar data dari \textit{site} yang lama tetap dapat digunakan saat \textit{rebuild} Zotonic.
 \end{enumerate}
